syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

option go_package = "github.com/muun/libwallet/api";

enum NullValue {
  NULL_VALUE = 0;
}

message Struct {
  // Unordered map of dynamically typed values
  map<string, Value> fields = 1;
}

message Value {
  oneof kind {
    NullValue null_value = 1;
    double double_value = 2;
    int32 int_value = 3;
    int64 long_value = 4;
    string string_value = 5;
    bool bool_value = 6;
  }
}

message SaveRequest {
  string key = 1;
  Value value = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  Value value = 1;
}

message DeleteRequest {
  string key = 1;
}

message SaveBatchRequest {
  Struct items = 1;
}

message GetBatchRequest {
  repeated string keys = 1;
}

message GetBatchResponse {
  Struct items = 1;
}

service StorageService {
  rpc Save(SaveRequest) returns (google.protobuf.Empty);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SaveBatch(SaveBatchRequest) returns (google.protobuf.Empty);
  rpc GetBatch(GetBatchRequest) returns (GetBatchResponse);
}
